WebContent/css/style.css
body {
  background-color: #333;
  color: lightblue; 
}

h1 {
  text-align: center;
  font-weight: bold; 
}

.glyphicon {
  color: #f24555;
}

#title {
  color: lightblue; 
  font-family: 'PT Sans', sans-serif;
}

.titleLoc {
	color: lightyellow;
}

#map {
     height: 400px;
}

#descPlace {
	font-size: 1.5em;
	font-family: 'Source Sans Pro', sans-serif;
	font-weight: bold;
	height: 400px;
	border-left-style: solid;
	border-right-style: solid;
	border-color: rgba(255, 255, 255, 0.1); 
}

#weaPlace {
	font-family: 'Source Sans Pro', sans-serif;
    font-weight: bold;
	color: lightyellow;
	height: 400px;
}

#weaHead {
	font-size: 1.4em;
}

.weaTemps{
	font-size: 1.2em;
}

#weaHot{
	color: #f24555;
}

#weaCold{
	color: lightblue;
}

#timeBtn {
    margin-top: 15px; 
}

.btn {
	font-weight: bold;
    color: #333;
    font-size: 1.2em;
}
  
#mornBtn {
	background: linear-gradient(to right, #364d62 0%, #b89f64 28%, #9cb6ca 56%);
}

#mornBtn:hover {
	background: linear-gradient(to right, #194f7f 0%, #edb42f 28%, #7ebae8 56%);
	border-color: #333;
}

#mornBtn.active{
	background: linear-gradient(to right, #194f7f 0%, #edb42f 28%, #7ebae8 56%);
    border-color: #333;
}

#phiBtn {
	background: #9cb6ca;
}

#phiBtn:hover {
	background: #7ebae8;
	border-color: #333;
}

#phiBtn.active{
	background: #7ebae8;
    border-color: #333;
}

#freBtn {
	background: linear-gradient(to right, #9cb6ca 0%, #b89f64 100%); 
}

#freBtn:hover {
	background: linear-gradient(to right, #7ebae8 0%, #edb42f 100%);
	border-color: #333;
}

#freBtn.active {
	background: linear-gradient(to right, #7ebae8 0%, #edb42f 100%);
    border-color: #333;
}

#niteBtn {
	background: linear-gradient(to right, #b89f64 0%, #364d62 100%);
}

#niteBtn:hover {
	background: linear-gradient(to right, #edb42f 0%, #194f7f 100%);
	border-color: #333;
}

#niteBtn.active{
	background: linear-gradient(to right, #edb42f 0%, #194f7f 100%);
    border-color: #333;
}

